--- a/index.html
+++ b/index.html
@@ -1882,6 +1882,7 @@ RPS heavily relies on some opensource <a href="#" onclick="showJS();return false
 				<option value="8" >Every 8 Hours</option>
 				<option value="6" >Every 6 Hours</option>
 				<option value="4" >Every 4 Hours</option>
+				<option value="3" >Every 3 Hours</option>
 				<option value="2" >Every 2 Hours</option>
 				<option value="1" >Hourly</option>
 			</select>
